--- a/docs/css/portfolio.css
+++ b/docs/css/portfolio.css
@@ -60,13 +60,15 @@ a
 	white-space: nowrap;
 	overflow-x: auto;
 	text-align: center;
+	width: 75%;
+	height: 75%;
 }
 .thumbnail
 {
 	display: inline-block;
 	cursor: pointer;
-	width: 126px;
-	height: 87.75px;
+	width: 168px;
+	height: 117px;
 	background-color: silver;
 	margin: 10px;
 	box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.4);
