--- a/docs/css/portfolio.css
+++ b/docs/css/portfolio.css
@@ -64,14 +64,13 @@ a
 .less, .more
 {
 	position: absolute;
-	font-size: 20px;
+	font-size: 30px;
 	top: 0;
 	width: 42px;
 	height: 145px;
 	line-height: 145px;
-	color: black;
-	background-color: white;
-	opacity: .5;
+	color: white;
+	background-color: rgba(255, 255, 255, 0.5);
 	pointer-events: none;
 	z-index: 2;
 }
