--- a/docs/css/portfolio.css
+++ b/docs/css/portfolio.css
@@ -69,7 +69,7 @@ a
 	width: 42px;
 	height: 145px;
 	line-height: 145px;
-	color: black;
+	color: white;
 	background-color: rgba(255, 255, 255, 0.5);
 	pointer-events: none;
 	z-index: 2;
