--- a/docs/css/portfolio.css
+++ b/docs/css/portfolio.css
@@ -84,11 +84,11 @@ a
 }
 .less::after
 {
-	content: "\25C0";
+	content: "\25C0 \FE0E";
 }
 .more::after
 {
-	content: "\25B6";
+	content: "\25B6 \FE0E";
 }
 .scroll
 {
