--- a/docs/css/portfolio.css
+++ b/docs/css/portfolio.css
@@ -69,7 +69,7 @@ a
 	width: 42px;
 	height: 145px;
 	line-height: 145px;
-	color: white;
+	color: green;
 	background-color: rgba(255, 255, 255, 0.5);
 	pointer-events: none;
 	z-index: 2;
@@ -84,11 +84,11 @@ a
 }
 .less::after
 {
-	//content: "\25C0\FE0E";
+	content: "\25C0\FE0E";
 }
 .more::after
 {
-	//content: "\25B6\FE0E";
+	content: "\25B6\FE0E";
 }
 .scroll
 {
