--- a/docs/css/portfolio.css
+++ b/docs/css/portfolio.css
@@ -103,20 +103,12 @@ a
 #overlay_close
 {
 	position: absolute;
-	opacity: .3;
+	opacity: 1;
 	top:0;
 	right:0;
 	color: white;
-	background-color: black;
-	border: 3px solid white;
-	border-radius: 50%;
-	line-height: 20px; 
-	font-size: 20px;
-	width: 20px;
-	height: 20px;
-	margin: 0;
-	padding: 3px;
-	text-align: center;
+	line-height: 110%; 
+	font-size: 40px;
 }
 #overlay_close:hover
 {
