--- a/docs/css/portfolio.css
+++ b/docs/css/portfolio.css
@@ -55,7 +55,8 @@ a
 	font-size: 0;
 	padding: 50px 0;
 	margin: auto;
-	max-width: 840px;
+	max-width: 1000px;
+	min-width: 400px;
 }
 .thumbnail
 {
@@ -66,8 +67,8 @@ a
 }
 .thumbnail img
 {
-	width: 168px;
-	height: 168px;
+	width: 200px;
+	height: 200px;
 	object-fit: cover;
 }
 .caption
@@ -80,8 +81,8 @@ a
 	color: white;
 	text-shadow: 2px 2px 2px black;
 	background-color: rgba(0, 0, 0, 0);
-	width: 168px;
-	height: 168px;
+	width: 200px;
+	height: 200px;
 	-webkit-transition: .2s;
 	transition: .2s;
 }
@@ -106,8 +107,8 @@ a
 	top:0;
 	right:0;
 	color: white;
-	font-size: 80px;
-	line-height: 65%;
+	font-size: 72px;
+	line-height: 0.6;
 }
 #overlay_close::after
 {
